# lox-interpreter-bytecode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  git-bash-shortcut.lnk  program.sh
docs/: README.md
docs/challenges/: 00C_Overview.md  01C_Switch.md  14-17C.md  18-21C.md  18-22C.md  23-24C.md  25-26C.md  27-29C.md  30C.md
docs/internal/: 00I_Overview.md  00_overview.md  01I_Opcodes.md  02I_BraceScanning.md  02I_Concatenate  03I_BreakAndContinue.md  04I_LoopVariableClosure.md  05I_Lambdas.md  06I_TestingTheGC.md  07I_ConstantVariables.md  08I_Compression.md  09I_LongOpcodes.md  09R_Sulfox.md  10I_SentinelClasses.md  10I_SynthClasses.md  11I_Arrays.md  12I_StaticMethods.md  13I_MultipleInheritance.md  14I_Exceptions.md  15I_Interface.md  16I_FunctionOverloading.md  17I_ArraySlicing.md  18I_DataClasses.md
src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  hashtable.c  hashtable.h  io.c  io.h  main.c  main.cpp  memory.c  memory.h  native.c  native.h  object.c  object.h  scanner.c  scanner.h  stl.lox  value.c  value.h  vm.c  vm.h
tests/: 00_interpolation.c  arrays.lox  assignment.lox  brokenFunction.lox  closure.lox  closuretest.lox  constant.lox  exceptions.lox  fibonacci.lox  forclosure.lox  function.lox  hashmap.lox  if.lox  insert.lox  interface.lox  interpolation.lox  lambda.lox  loop.lox  loop2.lox  memtest.lox  methods.lox  multiline.lox  overload.lox  scanning.lox  slice.lox  statics.lox  stringcast.lox  superclasses.lox  tabletest.lox  try-catch.lox  vartest.lox
